
***   Support queue slicing (#2326).

***   Support associative array pattern assignments and defaults.

***   Support static methods and typedefs in classes (#2615). [Krzysztof Bieganski]

****  Report error on typedef referencing self (#2539). [Cody Piersall]

****  Fix iteration over mutating list bug in VPI (#2588). [Kaleb Barrett]

****  Fix return from callValueCbs (#2589) (#2605). [Marlon James]

****  Fix WIDTH warnings on comparisons with nullptr (#2602). [Rupert Swarbrick]

****  Fix fault when $fgets, $sscanf, etc used with string (#2604). [Yutetsu TAKATSUKASA]

****  Fix WIFEXITED missing from MinGW/MSYS2 (#2609). [Jean Berniolles]

****  Fix queue poping wrong value when otherwise unused (#2512). [nanduraj1]


* Verilator 4.102 2020-10-15

****  Support const object new() assignments.

****  Support # as a comment in -f files (#2497). [phantom-killua]

****  Support 'this' (#2585). [Rafal Kapuscik]

****  Support defines for FST tracing (#2592). [Markus Krause]

****  Support |=> inside properties (#1292). [Peter Monsson]

****  Fix timescale with --hierarchical (#2554). [Yutetsu TAKATSUKASA]

****  Fix cmake build with --hierarchical (#2560). [Yutetsu TAKATSUKASA]

****  Fix -G dropping public indication (#2561). [Andrew Goessling]

****  Fix $urandom_range passed variable (#2563). [nanduraj1]

****  Fix method calls to package class functions (#2565). [Peter Monsson]

****  Fix class wide member display (#2567). [Nandu Raj P]

****  Fix hierarchical references inside function (#2267) (#2572). [James Pallister]

****  Fix flushCall for backward compatibility (#2580). [chenguokai]

****  Fix preprocessor stringify of undefined macro. [Martin Whitaker]


* Verilator 4.100 2020-09-07

**    C++11 or newer compilers are now required.

**    SystemC 2.3.0 or newer (SYSTEMC_VERSION >= 20111121) is now required.

**    Support hierarchical Verilation (#2206). [Yutetsu TAKATSUKASA]

****  Support (with limitations) class extern, class extends, virtual class.